Merge master branch with ITHC (#1481)
* feat/CIV-1567 removed code duplication (#765)

* update confirmation screen for multiparty (#868)

* Feat/civ 1721 (#852)

* Fix security scan and dependency check (#891)

* Update security.sh

* Update suppressions.xml

* upat

* upat

* Update security.sh

Co-authored-by: Mounika Ammineni <mounikaammineni@Mounikas-MacBook-Pro.local>

* CIV-1976 Text Change (#882)

* Feat: CIV-1513 (#863)

* CIV-217: Email served to Claimant & Defendant LR

* CIV-217: adding legal org name

* CIV-217: checkstyle fixes

* feat/CIV-220 missing fields added; null-safe-ing DQ Generator; fixed hearings different depending on claim type

* CIV-217: Email notifications

* CIV-217: code change

* CIV-217: code refactor

* feat/CIV-220 fixed, wrong field for witness number for small claims

* CIV-760 changes

* CIV-1308 changes

* CIV-929: Camunda integration full defence

* CIV-760 changes

* CIV-760 changes

* feat/CIV-220 tests completed

feat/CIV-220 tests completed

* CIV-1175 initial changes

* CIV-1228 changes

* CIV-1228 added handler to notify respondent solicitor 2

* feat/CMC-1678: Send respondent name with litigant friend (#725)

* CIV-1482: Fix security scan & fortify scan (#734)

* Fix security scan

* Update slf4j dependency for fortify to run

* Update

* Update

* Update Dockerfile

* Update security.sh

* Update security.sh

* Update security.sh

* Update audit.json

Co-authored-by: Mounika Ammineni <mounikaammineni@Mounikas-MacBook-Pro.local>

* Feat/civ 1308 (#730)

* CIV-217: Email served to Claimant & Defendant LR

* CIV-217: adding legal org name

* CIV-217: checkstyle fixes

* feat/CIV-220 missing fields added; null-safe-ing DQ Generator; fixed hearings different depending on claim type

* CIV-217: Email notifications

* CIV-217: code change

* CIV-217: code refactor

* feat/CIV-220 fixed, wrong field for witness number for small