@@ -2,14 +2,14 @@ plugins {
   id 'application'
   id 'checkstyle'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.4.2'
-  id 'org.owasp.dependencycheck' version '6.1.5'
-  id 'com.github.ben-manes.versions' version '0.38.0'
-  id 'org.sonarqube' version '3.1.1'
-  id 'au.com.dius.pact' version '4.2.4'
+  id 'io.spring.dependency-management' version '1.0.12.RELEASE'
+  id 'org.springframework.boot' version '2.5.14'
+  id 'org.owasp.dependencycheck' version '7.1.1'
+  id 'com.github.ben-manes.versions' version '0.42.0'
+  id 'org.sonarqube' version '3.4.0.2513'
+  id 'au.com.dius.pact' version '4.2.14'
   id "io.freefair.lombok" version "5.3.3.3"
-  id "org.flywaydb.flyway" version "7.8.1"
+  id "org.flywaydb.flyway" version "9.0.1"
   id 'net.ltgt.apt' version '0.21'
 }
 
@@ -68,37 +68,47 @@ allprojects {
 
   dependencyManagement {
     dependencies {
-      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
+      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
       // CVE-2018-10237 - Unbounded memory allocation
-      dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
+      dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.10'
       // CVE-2020-26945 - Mishandles deserialization of object streams.
-      dependencySet(group: 'com.google.guava', version: '30.1.1-jre') {
+      dependencySet(group: 'com.google.guava', version: '31.1-jre') {
         entry 'guava'
       }
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.4.32'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: '1.4.32'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.4.32'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.4.31'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.4.32'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.7.0'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: '1.7.10'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.7.10'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.7.10'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.7.0'
       // CVE-2020-29582
 
       // CVE-2021-29425
-      dependency group: 'commons-io', name: 'commons-io', version: '2.8.0'
+      dependency group: 'commons-io', name: 'commons-io', version: '2.11.0'
+      dependency group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.10.0'
+      dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.7.2'
+
+      // solves CVE-2022-25857
+      dependencySet(
+        group: 'org.yaml',
+        version: '1.31'
+      ) {
+        entry 'snakeyaml'
+      }
     }
     imports {
-      mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.2'
+      mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
     }
+  }
+
+  configurations {
+    testCompile.exclude group: 'ch.qos.logback', module: 'logback-classic'
   }
 
   repositories {
     mavenLocal()
-    jcenter()
     mavenCentral()
     maven {
-      url "https://dl.bintray.com/hmcts/hmcts-maven"
-    }
-    maven {
-      url  "http://repo.spring.io/milestone"
+      url "https://jitpack.io"
     }
     maven {
       url  "https://repo.spring.io/libs-milestone"
@@ -106,6 +116,7 @@ allprojects {
     maven {
       url "https://jitpack.io"
     }
+    jcenter()
   }
 }
 
@@ -166,6 +177,12 @@ task pullTestAsset(type: Exec, description: 'Installs Yarn dependencies.') {
   commandLine './bin/pull-latest-release-asset.sh', 'civil-ccd-definition', 'civil-e2e.zip'
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
   commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'install'
 }
@@ -175,20 +192,47 @@ task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Ya
 }
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
-  commandLine './bin/wait-for.sh', System.env.URL
-  commandLine './bin/wait-for.sh', System.env.CIVIL_SERVICE_URL
+  commandLine './bin/wait-for.sh'
+  commandLine './bin/wait-for.sh', 'manage-case'
 }
 
 task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
 }
 
-task runFunctionalTests(type: Exec, description: 'Runs functional tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'test:functional'
+task runSpecApiTests(type: Exec, description: 'Runs Spec functional tests.') {
+  onlyIf {
+    return System.env.ENVIRONMENT == 'preview'
+  }
+  commandLine '/usr/bin/yarn', '--silent', 'test:api-spec'
+}
+
+
+task runApiTests(type: Exec, description: 'Runs Api tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:api-unspec'
+}
+
+task runDJTests(type: Exec, description: 'Runs DJ Api functional tests.') {
+  onlyIf {
+    return System.env.ENVIRONMENT == 'preview'
+  }
+  commandLine '/usr/bin/yarn', '--silent', 'test:api-dj'
 }
 
 task runRpaHandOffTests(type: Exec, description: 'Runs functional tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:rpa'
+}
+
+task runNightlyMultipartyTests(type: Exec, description: 'Runs additional multiparty nightly tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:nightly-multiparty'
+}
+
+task runEndToEndUnspecTests(type: Exec, description: 'Runs E2E Unspecified claim tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:e2e-unspec'
+}
+
+task runCrossBrowserTests(type: Exec, description: 'Runs cross browser tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:crossbrowser'
 }
 
 def inStrictOrder(Task... tasks) {
@@ -203,7 +247,11 @@ task smoke(description: 'Runs the smoke tests.') {
 }
 
 task functional(description: 'Runs the functional tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, pullTestAsset, installDependencies, checkDependenciesIntegrity, runFunctionalTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness, pullTestAsset, installDependencies, checkDependenciesIntegrity, runSpecApiTests, runApiTests, runDJTests))
+}
+
+task crossbrowser(description: 'Runs the crossbrowser tests.') {
+  dependsOn(inStrictOrder(awaitApplicationReadiness, pullTestAsset, installDependencies, checkDependenciesIntegrity, runCrossBrowserTests))
 }
 
 project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
@@ -213,7 +261,8 @@ sonarqube {
     property "sonar.projectName", "CIVIL :: service"
     property "sonar.projectKey", "civil-service"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
-    property "sonar.coverage.exclusions", "**/model/**, **/config/**/*Configuration.java, **/testingsupport/**, **/*ExternalTaskListener.java, **/stereotypes/**, **/*Exception.java"
+    property "sonar.coverage.exclusions", "**/model/**, **/config/**/*Configuration.java, **/testingsupport/**, **/*ExternalTaskListener.java, **/stereotypes/**, **/*Exception.java, **/CivilDocumentStitchingService.java, **/CountriesAllowed.java, **/FeesService.java, **/UnavailableDateValidator.java, **/AcknowledgeOfServiceCallbackHandler.java, **/FlowPredicate.java, **/CreateClaimCallbackHandler.java, **/CaseProceedsInCasemanRespondentNotificationHandler.java, **/PostcodeValidator.java, **/BundleRequestExecutor.java, **/InformAgreedExtensionDateCallbackHandler.java, **/*Spec*.java"
+    property "sonar.cpd.exclusions", "**/*DocumentManagementService.java, **/*Spec*.java"
     property "sonar.host.url", "https://sonar.reform.hmcts.net/"
   }
 }
@@ -237,13 +286,14 @@ jacocoTestReport.dependsOn {
 
 def versions = [
   junit              : '5.7.0',
-  junitPlatform      : '1.7.1',
+  junitPlatform      : '1.8.1',
   reformLogging      : '5.1.5',
   springBoot         : springBoot.class.package.implementationVersion,
   springStatemachine : '3.0.0.M2',
   springfoxSwagger   : '2.9.2',
-  lombok             : '1.18.12',
-  pact               : '3.5.24'
+  lombok             : '1.18.24',
+  pact               : '3.5.24',
+  springSecurity     : '5.7.1'
 ]
 
 ext.libraries = [
@@ -255,6 +305,15 @@ ext.libraries = [
     "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
   ]
 ]
+
+configurations.all {
+  resolutionStrategy.eachDependency { details ->
+    if (details.requested.group == 'org.projectlombok') {
+      details.useVersion versions.lombok
+    }
+  }
+  exclude group: 'org.springframework.security', module: 'spring-security-rsa'
+}
 
 dependencies {
   implementation project(':sendgrid-client')
@@ -270,71 +329,80 @@ dependencies {
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
-  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.19'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.4.1'
 
-  implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: '3.19.0'
+  implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: '3.30.0'
   implementation group: 'org.jdbi', name: 'jdbi3-spring4', version: '3.19.0'
 
   implementation group: 'org.flywaydb', name: 'flyway-core'
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.7.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.3'
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '3.1.0'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
 
-  implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.1'
+  implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.9'
   implementation group: 'org.springframework.retry', name: 'spring-retry'
 
-  implementation group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.6'
+  implementation group: 'com.github.hmcts', name: 'ccd-client', version: '4.8.6'
   implementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
   implementation group: 'com.github.hmcts', name: 'fees-java-client', version: '0.0.6'
-  implementation group: 'com.github.hmcts', name: 'payments-java-client', version: '1.0.1'
+  implementation group: 'com.github.hmcts', name: 'payments-java-client', version: '1.4.1'
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
-  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.0-RELEASE'
+  implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.2-RELEASE'
+  implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.1'
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
-  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
+  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.1'
 
-  implementation group: 'org.springframework.security', name: 'spring-security-web'
-  implementation group: 'org.springframework.security', name: 'spring-security-config'
+  implementation group: 'org.springframework.security', name: 'spring-security-web', version: versions.springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-config', version: versions.springSecurity
   // CVE-2021-22112 - Privilege Escalation
-  implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.6'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
-  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.8.1'
+  implementation group: 'org.springframework.security', name: 'spring-security-core', version: versions.springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-resource-server', version: versions.springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: versions.springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: versions.springSecurity
+  implementation group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: versions.springSecurity
+  implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.23'
   implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
   implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'
 
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.14.1'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.18.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.18.0'
+  implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
 
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.43'
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.0.5'
 
-  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.12.0'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.63'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '10.1.0-M16'
 
-  implementation group: 'com.networknt', name: 'json-schema-validator', version: '1.0.52'
+  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.15.2'
 
-  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.15.0'
+  implementation group: 'com.networknt', name: 'json-schema-validator', version: '1.0.71'
+
+  implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.16.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.4'
-  implementation group: 'org.camunda.bpm', name: 'camunda-engine-rest-core', version: '7.14.0'
-  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.12.3'
+  implementation group: 'org.camunda.bpm', name: 'camunda-engine-rest-core', version: '7.16.0'
+  implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.13.1'
+  implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.1'
 
   // JAX-B dependencies for JDK 9+
   implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
-  implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '3.0.0'
-  implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '3.0.0'
+  implementation group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.0'
+  implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: '4.0.0'
 
-  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.3.1'
+  implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.10.1'
 
-  testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.9.0'
-  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.9.0'
-  testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.9.0'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
+  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.1.0'
+  testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.6.1'
 
   testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   testCompileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
@@ -342,12 +410,11 @@ dependencies {
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-  testImplementation group: 'io.rest-assured', name: 'rest-assured', {
-    exclude group: 'io.rest-assured', module: 'xml-path'
-  }
+  testImplementation group: 'io.rest-assured', name: 'rest-assured'
 
   testCompile group: 'org.springframework.statemachine', name: 'spring-statemachine-test', version: versions.springStatemachine
-
+  testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
   //pact contract testing
   contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-junit5_2.12', version: versions.pact
   contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-java8_2.12', version: versions.pact
